--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
-  --txt1:'Work-sans', sans-serif;
+  --txt1: 'Work Sans', sans-serif;
 }
  
  
@@ -94,13 +94,15 @@ a[href^="mailto:"]:hover { text-decoration-line: underline; font-weight:inherit;
   
 }
 .mission_vision section{
-  width: 30%;
+  width: 40%;
   padding: 20px;
   text-align: center;
   backdrop-filter: blur(5px); 
   border-radius: 32px; 
   transition: .3s;
+  border-radius: 141px 10px;
   box-shadow: 1px 1px 10px 0px #3d91f5, inset -8px -8px 16px 0px #3d56f5, inset 0px 11px 28px 0px rgb(255, 255, 255);
+  padding: 50px;
 }
 .mission_vision .mission:hover {
   box-shadow: 1px 1px 10px 0px #3d91f5, inset 8px 8px 16px 0px #3d56f5, inset 0px 11px 28px 0px rgb(255, 255, 255);
