--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,9 @@ input[type="submit"] { cursor: pointer; }
 a[href^="tel:"],a[href^="mailto:"] { color: inherit!important; text-decoration: none; font-weight:inherit; } 
 a[href^="mailto:"]:hover { text-decoration-line: underline; font-weight:inherit; } 
 
-
+body *{
+  
+}
 
 
 .wrapper{
@@ -80,9 +82,9 @@ a[href^="mailto:"]:hover { text-decoration-line: underline; font-weight:inherit;
 }
 
 .mv_container{
-  margin-top: 100px;
+  margin-top: 50px;
   position: relative;
-  height: 750px;
+  height: 500px;
 }
 
 .mission_vision {
@@ -124,44 +126,18 @@ a[href^="mailto:"]:hover { text-decoration-line: underline; font-weight:inherit;
   background: #fff;
   }
 
-.mission_vision .mission::before{
-  content: '';
-  background: url('images/mission.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  position: static;
-  width: 90px;
-  height: 100px;
-  display: block;
-  margin: auto;
- }
-
- .mission_vision .vision::before{
-  content: '';
-  background: url('images/vision.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  position: static;
-  width: 90px;
-  height: 100px;
-  display: block;
-  margin: auto;
- }
-
-
-.mission_vision section h2{
-  font-family: var(--txt1);
-  font-size: 30px;
-  font-weight: 700;
-  padding: 10px;
-  background: -webkit-linear-gradient(#000, #000);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  
-}
-.mission_vision section p{
-  font-family: var(--txt1);
-  font-size: 16px;
-  padding: 10px;
-}
-
+.mission_vision .mission::before{ content: ''; background: url('images/mission.png'); background-size: contain; background-repeat: no-repeat; position: static; width: 90px; height: 100px; display: block; margin: auto; }
+.mission_vision .vision::before{ content: ''; background: url('images/vision.png'); background-size: contain; background-repeat: no-repeat; position: static; width: 90px; height: 100px; display: block; margin: auto; }
+.mission_vision section h2{ font-family: var(--txt1); font-size: 30px; font-weight: 700; padding: 10px; background: -webkit-linear-gradient(#000, #000); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+.mission_vision section p{ font-family: var(--txt1); font-size: 16px; padding: 10px; }
+.services_container{ margin-top: 50px; padding: 0 0 100px 0; position: relative; }
+.services_boxes{ display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
+.services_boxes section{ width: 30%; padding: 20px; position: relative; text-align: center; font-family: var(--txt1); transition: .3s; border: 1px solid black; border-radius: 135px 5px; overflow: hidden; }
+.services_boxes section hr{ width: 0px; transition: 1s; }
+.services_boxes section::before{ content: ''; display: block; margin: auto; background: url("images/services.png"); background-repeat: no-repeat; background-size: contain; height: 60px; width: 60px; position: static; transition: .3s; }
+.services_boxes section::after{ content: ''; position: absolute; top: 100%; left: 0; right: 0; bottom: 0; background-color: #3d91f5; border-radius: 135px 5px; z-index: -1; transition: 1s; }
+.services_boxes section:hover::after{ top: 0%; opacity: .5; }
+.services_boxes section:hover hr{ width: 200px; }
+.services_boxes h2{ padding: 10px; font-weight: 700; font-size: 24px; }
+.services_boxes p{ padding: 10px; font-size: 16px; }
+.services_boxes section a { position: absolute; inset: 0; }
