--- a/css/media.css
+++ b/css/media.css
@@ -2,3 +2,11 @@
   .mission_vision {flex-direction: column; padding: 20px;}
   .mission_vision section{width: 100%;}
 }
+@media only screen and (max-width: 1000px){
+  .services_boxes {flex-wrap: wrap;}
+  .services_boxes section{width: 33%;}
+}
+@media only screen and (max-width: 800px){
+ .services_boxes{flex-direction: column; padding: 10px;}
+ .services_boxes section{width: 100%;}
+}
