added hover effect on h2.

--- a/styles.css
+++ b/styles.css
@@ -130,12 +130,14 @@ body *{
 .mission_vision .vision::before{ content: ''; background: url('images/vision.png'); background-size: contain; background-repeat: no-repeat; position: static; width: 90px; height: 100px; display: block; margin: auto; }
 .mission_vision section h2{ font-family: var(--txt1); font-size: 30px; font-weight: 700; padding: 10px; background: -webkit-linear-gradient(#000, #000); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 .mission_vision section p{ font-family: var(--txt1); font-size: 16px; padding: 10px; }
+
 .services_container{ margin-top: 50px; padding: 0 0 100px 0; position: relative; }
 .services_boxes{ display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
 .services_boxes section{ width: 30%; padding: 20px; position: relative; text-align: center; font-family: var(--txt1); transition: .3s; border: 1px solid black; border-radius: 135px 5px; overflow: hidden; }
 .services_boxes section hr{ width: 0px; transition: 2s; }
 .services_boxes section::before{ content: ''; display: block; margin: auto; background: url("images/services.png"); background-repeat: no-repeat; background-size: contain; height: 60px; width: 60px; position: static; transition: .3s; }
 .services_boxes section:hover hr{ width: 200px; }
-.services_boxes h2{ padding: 10px; font-weight: 700; font-size: 24px; }
+.services_boxes section:hover h2{color: #3d56f5;}
+.services_boxes h2{ padding: 10px; font-weight: 700; font-size: 24px; transition: 2s;}
 .services_boxes p{padding: 10px; font-size: 16px; }
 .services_boxes section a { position: absolute; inset: 0; }
